Fix z-indexing for Notifications and Category tabs

--- a/src/components/tabs/CategoryTabBar.css
+++ b/src/components/tabs/CategoryTabBar.css
@@ -5,6 +5,7 @@
   right: 0;
   bottom: -75px;
   left: 0;
+  z-index: 2;
   height: 75px;
   font-size: 14px;
   white-space: nowrap;
